@@ -1,6 +1,18 @@
 v3.10.3 (XXXX-XX-XX)
 --------------------
 
+* Fix coordinator segfault in AQL queries in which the query is invoked from
+  within a JavaScript context (e.g. from Foxx or from the server's console mode)
+  **and** the query has multiple coordinator snippets of which except the
+  outermost one invokes a JavaScript function.
+  Instead of crashing, coordinators will now respond with the exception "no v8
+  context available to enter for current transaction context".
+  For AQL queries that called one of the AQL functions `CALL` or `APPLY` with a
+  fixed function name, e.g. `APPLY('CONCAT', ...)`, it is now also assumed
+  correctly that no JavaScript is needed, except if the fixed function name is
+  the name of a user-defined function.
+  This fixes an issue described in OASIS-24962.
+
 * BTS-1192: fix a potential race during hot backup creation, which could result
   in error messages such as `{backup} Source file engine_rocksdb/002516.sst does
   not have a hash file.` during hot backup creation. However, despite the error
